--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ font-family: 'Rubik', sans-serif;;
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(#00458B,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),#00458B), url(Images/falezacik.jpg);
+    background-image: linear-gradient(#00458B,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),#00458B), url(images/falezacik.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -220,7 +220,7 @@ nav .material-symbols-outlined{
     
 }
 .img3{
-    background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),#3FD2C7), url(Images/falezdis.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),#3FD2C7), url(images/falezdis.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
