--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ nav .material-symbols-outlined{
     padding-left: 75px;
 }
 .img{
-    background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),#3FD2C7), url(images/falezayisigi.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),#3FD2C7), url(images/falezayisigii.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -220,7 +220,7 @@ nav .material-symbols-outlined{
     
 }
 .img3{
-    background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),#3FD2C7), url(images/falezdis.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),#3FD2C7), url(images/falezayisigii.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -257,7 +257,12 @@ nav .material-symbols-outlined{
         flex-basis: 50;
         margin: 0px 0;
     }
-    .img, .img2, .img3{
+    .img, .img3{
+        height: 50%;
+        flex-basis: 100%;
+        margin-top:150px;
+    }
+    .img2{
         height: 50%;
         flex-basis: 100%;
     }
@@ -265,13 +270,17 @@ nav .material-symbols-outlined{
         flex-basis: 100%;
         height: 30%;
     }
-    @media (max-width: 380px){
+    @media (max-width: 400px){
         .feature-box{
             width: 99%;
             height: 150vh;
         }
+        .img, .img3{
+            height: 50%;
+            flex-basis: 100%;
+            margin-top:200px;
     }
-
+    }
 }
 .online-takip{
     margin-top: 50px;
