--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ nav .material-symbols-outlined{
     
 }
 .img3{
-    background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),#3FD2C7), url(images/falezayisigii.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),#3FD2C7), url(images/falezz.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
